# py_lens

./: .gitignore  Cargo.toml  README.md  py_lens.pyi  pyproject.toml
src/: array_reshape.rs  lens.rs  lib.rs  window.rs
src/lens/: point_compute.rs
src/window/: window_methods.rs
