[package]
name = "py_lens"
version = "0.2.0"
edition = "2021"
authors = ["Quiet-Clicking-Sounds <55921097+Quiet-Clicking-Sounds@users.noreply.github.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_lens"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.3", features = ["extension-module"] }
ndarray = {version =  "0.15.6", features = ["rayon"]  }
numpy = "0.17.2"
rayon = "1.5.3"
fast_hilbert = "2.0.0"
num-traits = "0.2.15"

[dev-dependencies]
rand = "0.8.5"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
